try fix prerendering option 2

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ name = "blog"
 compatibility_date = "2024-11-18"
 main = "./build/server/index.js"
 assets = { directory = "./build/client/" }
-
+node_compat = true
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Docs:
 # - https://developers.cloudflare.com/pages/functions/bindings/#environment-variables
